changed jupyterr notebooks to work in container

--- a/tools/checkLogs.ipynb
+++ b/tools/checkLogs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,19 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "fromBackup = False\n",
     "\n",
     "if fromBackup:\n",
-    "    pathSeg0 = \"roklasen/LumiFit/backup_beamTiltEnabled/plab_\"\n",
+    "    pathSeg0 = \"LumiFit/backup_beamTiltEnabled/plab_\"\n",
     "    pathSeg1 = \"GeV/dpm_elastic_theta_2.7-13.0mrad_recoil_corrected/no_geo_misalignment/100000/1-100_xy_m_cut_real/no_alignment_correction/**/binning_300/merge_data/\"\n",
     "    moms = (\"1.50\", \"4.06\", \"8.90\", \"11.91\", \"15.00\")\n",
     "\n",
     "else:\n",
-    "    pathSeg0 = \"roklasen/LumiFit/plab_\"\n",
+    "    pathSeg0 = \"LumiFit/plab_\"\n",
     "    pathSeg1 = \"GeV/dpm_elastic_theta_2.7-13.0mrad_recoil_corrected/ip_offset_XYZDXDYDZ_0.0_0.0_0.0_0.0_0.0_0.0/beam_grad_XYDXDY_0.0_0.0_0.0_0.0/no_geo_misalignment/100000/1-100_xy_m_cut_real/no_alignment_correction/**/binning_300/merge_data/\"\n",
     "    moms = (\"1.50\", \"4.06\", \"8.90\", \"11.91\", \"15.00\")\n",
     "\n",
@@ -33,41 +33,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "oi! path is: /mnt/work/himsterData/LumiFit/plab_1.50GeV/dpm_elastic_theta_2.7-13.0mrad_recoil_corrected/ip_offset_XYZDXDYDZ_0.0_0.0_0.0_0.0_0.0_0.0/beam_grad_XYDXDY_0.0_0.0_0.0_0.0/no_geo_misalignment/100000/1-100_xy_m_cut_real/no_alignment_correction/bunches_10/binning_300/merge_data/runLmdFit.log\n",
       "mom: 1.50\n",
-      "FVAL  = -21.8635447399228724\n",
+      "FVAL  = -50.8749015861139924\n",
       "\n",
-      "relative deviation (%):-0.0583968\n",
-      "\n",
-      "------\n",
-      "mom: 4.06\n",
-      "FVAL  = -643.516311206272803\n",
-      "\n",
-      "relative deviation (%):-0.267074\n",
+      "relative deviation (%):0.0131336\n",
       "\n",
       "------\n",
-      "mom: 8.90\n",
-      "FVAL  = -533.76824594669597\n",
-      "\n",
-      "relative deviation (%):-0.114757\n",
-      "\n",
+      "oi! path is: /mnt/work/himsterData/LumiFit/plab_4.06GeV/dpm_elastic_theta_2.7-13.0mrad_recoil_corrected/ip_offset_XYZDXDYDZ_0.0_0.0_0.0_0.0_0.0_0.0/beam_grad_XYDXDY_0.0_0.0_0.0_0.0/no_geo_misalignment/100000/1-100_xy_m_cut_real/no_alignment_correction/bunches_10/binning_300/merge_data/runLmdFit.log\n",
       "------\n",
+      "oi! path is: /mnt/work/himsterData/LumiFit/plab_11.91GeV/dpm_elastic_theta_2.7-13.0mrad_recoil_corrected/ip_offset_XYZDXDYDZ_0.0_0.0_0.0_0.0_0.0_0.0/beam_grad_XYDXDY_0.0_0.0_0.0_0.0/no_geo_misalignment/100000/1-100_xy_m_cut_real/no_alignment_correction/bunches_10/binning_300/merge_data/runLmdFit.log\n",
       "mom: 11.91\n",
-      "FVAL  = -369.515122425512345\n",
+      "FVAL  = -862.768317211095564\n",
       "\n",
-      "relative deviation (%):-0.0439171\n",
-      "\n",
-      "------\n",
-      "mom: 15.00\n",
-      "FVAL  = -855.330526737861874\n",
-      "\n",
-      "relative deviation (%):-0.0152774\n",
+      "relative deviation (%):-0.0128085\n",
       "\n",
       "------\n"
      ]
@@ -76,8 +62,9 @@
    "source": [
     "for mom in moms:\n",
     "    pattern = str(pathSeg0 + mom + pathSeg1 + logFileName)\n",
-    "    pathCands = Path(\"/mnt/himsterData\").glob(pattern)\n",
+    "    pathCands = Path(\"/mnt/work/himsterData\").glob(pattern)\n",
     "    for path in pathCands:\n",
+    "        # print(f'oi! path is: {path}')\n",
     "        with open(path, \"r\") as f:\n",
     "            logContent = f.readlines()\n",
     "\n",
@@ -100,7 +87,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 ('.venv': venv)",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -114,12 +101,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.7.3"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "764600cfca9eb341770f9a9d745c12cb1bbc880e74ff72385d7e716b6867bf22"
+    "hash": "767d51c1340bd893661ea55ea3124f6de3c7a262a8b4abca0554b478b1e2ff90"
    }
   }
  },
