--- a/tools/checkLogs.ipynb
+++ b/tools/checkLogs.ipynb
@@ -40,18 +40,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "oi! path is: /mnt/work/himsterData/LumiFit/plab_1.50GeV/dpm_elastic_theta_2.7-13.0mrad_recoil_corrected/ip_offset_XYZDXDYDZ_0.0_0.0_0.0_0.0_0.0_0.0/beam_grad_XYDXDY_0.0_0.0_0.0_0.0/no_geo_misalignment/100000/1-100_xy_m_cut_real/no_alignment_correction/bunches_10/binning_300/merge_data/runLmdFit.log\n",
       "mom: 1.50\n",
       "FVAL  = -50.8749015861139924\n",
+      "\n",
+      "measured luminosity:441201\n",
+      "\n",
+      "measured luminosity error:299.29\n",
+      "\n",
+      "generated luminosity:441143\n",
       "\n",
       "relative deviation (%):0.0131336\n",
       "\n",
       "------\n",
-      "oi! path is: /mnt/work/himsterData/LumiFit/plab_4.06GeV/dpm_elastic_theta_2.7-13.0mrad_recoil_corrected/ip_offset_XYZDXDYDZ_0.0_0.0_0.0_0.0_0.0_0.0/beam_grad_XYDXDY_0.0_0.0_0.0_0.0/no_geo_misalignment/100000/1-100_xy_m_cut_real/no_alignment_correction/bunches_10/binning_300/merge_data/runLmdFit.log\n",
+      "mom: 4.06\n",
+      "FVAL  = -1163.70603413403296\n",
+      "\n",
+      "measured luminosity:3.42723e+06\n",
+      "\n",
+      "measured luminosity error:2333.03\n",
+      "\n",
+      "generated luminosity:3.44017e+06\n",
+      "\n",
+      "relative deviation (%):-0.376233\n",
+      "\n",
       "------\n",
-      "oi! path is: /mnt/work/himsterData/LumiFit/plab_11.91GeV/dpm_elastic_theta_2.7-13.0mrad_recoil_corrected/ip_offset_XYZDXDYDZ_0.0_0.0_0.0_0.0_0.0_0.0/beam_grad_XYDXDY_0.0_0.0_0.0_0.0/no_geo_misalignment/100000/1-100_xy_m_cut_real/no_alignment_correction/bunches_10/binning_300/merge_data/runLmdFit.log\n",
       "mom: 11.91\n",
       "FVAL  = -862.768317211095564\n",
+      "\n",
+      "measured luminosity:3.49257e+06\n",
+      "\n",
+      "measured luminosity error:2558.58\n",
+      "\n",
+      "generated luminosity:3.49302e+06\n",
       "\n",
       "relative deviation (%):-0.0128085\n",
       "\n",
@@ -71,6 +91,10 @@
     "        for line in logContent:\n",
     "            if line.startswith(\"FVAL\"):\n",
     "                print(f\"mom: {mom}\")\n",
+    "                print(line)\n",
+    "            if line.startswith(\"measured\"):\n",
+    "                print(line)\n",
+    "            if line.startswith(\"generated\"):\n",
     "                print(line)\n",
     "            if line.startswith(\"relative deviation (%)\"):\n",
     "                print(line)\n",
